	  in all existing drivers.  More to come (2015-08-18).
	* arch/arm/src/lpc17/lpc17_irq.c: Set NVIC vector address so that
	  code can execute with a bootloader or can execute from RAM.  From
	  Pavel Pisa (2015-08-20).
	* All ARMV7-M IRQ setup:  Always set the NVIC vector table address
	  unconditionally.  This is needed in cases where the code is running
	  with a bootload and when the code is running from RAM.  It is also
	  needed by the logic of up_ramvec_initialize() which gets the vector
	  base address from the NVIC.  Suggested by Pavel Pisa (2015-08-21).
	* SAMV7 USBHS DCD: The device controller driver is (finally) functional
	  (2015-08-21).
	* recvfrom(): Correct wait for new data when NET_UDP_READAHEAD is
	  enabled.  Fix size accounting when recvfrom_udpreadahead() sets
	  state.rf_recvlen == -1.  I have not checked if data are accumulated
	  to the right position in the buffer however. From Pavel Pisa
	  (2015-08-21).
	* sched/wdog/wd_create.c:  Correct a counting error in the number
	  of available watchdog timers.  When the number of free timers is
	  low, the counter could be incremented below zero (2015-08-21).
	* arch/arm/src/stm32: Add OTG support for STM32F44x.  From David
	  Sidrane (2015-08-21).
	* arch/arm/src/lpc17: Actually implement options to use external
	  SDRAM and or SRAM for the heap.  From Pavel Pisa (2015-08-21).
	* gethostbyname(): correct returned address format when DNS is used.
	  The hostent.h_addr_list should point to raw in_addr or in6_addr
	  as defined in the standard. Original implementation used that
	  for numeric addresses but for DNS lookup returned pointer to
	  whole sockaddr_in or sockaddr_in6.  From Pavel Pisa  (2015-08-21).
	* tools/mksymtab: declare g_symtab array as conts to occupy RO
	  section (Flash).  From Pavel Pisa (2015-08-23).
	* libc/libc.csv and syscalls/syscalls.csv:  Define some symbol
	  export conditions, correct errno and add sleep and usleep. From
	  Pavel Pisa (2015-08-23).